apartado de personal information terminado, work experience en proceso

--- a/Tarea6/src/app/components/banner/banner.component.html
+++ b/Tarea6/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
 <div class="banner">
-
+    
     <div class="content">
         <div class="left">
             <div class="text">
@@ -13,7 +13,7 @@
 
         <div class="right">
             <div class="image">
-                <img src="https://via.placeholder.com/420x420" class="bannerImage">     
+                <img src="../../../assets/drawingDany.png" alt="hola" class="bannerImage">     
             </div>
         </div>
     </div>
