--- a/Tarea6/src/app/components/education/education.component.html
+++ b/Tarea6/src/app/components/education/education.component.html
@@ -1,1 +1,18 @@
-<p>education works!</p>
+<div class="education">
+  <div class="uniSection">
+    <div class="card" id="uniCard">
+      <h1>ITESO</h1>
+      <h2>Instituto Tecnológico de Estudios Superiores de Occidente</h2>
+    </div>
+  </div>
+  <div class="highschoolSection">
+    <div class="card">
+      <h1>CEDI</h1>
+      <h2>Centro de Desarrollo Integral Arboledas</h2>
+    </div>
+    <div class="card">
+      <h1>Agora</h1>
+      <h2>Sant Cugat International School</h2>
+    </div>
+  </div>
+</div>
