--- a/Tarea6/src/app/components/personal-info/personal-info.component.html
+++ b/Tarea6/src/app/components/personal-info/personal-info.component.html
@@ -1,1 +1,19 @@
-<p>personal-info works!</p>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>  
+<div class="personalInfo">
+    <div class="file" id="mainFile">
+        <div class="title">
+            <div class="filename">
+                About_me.txt
+                <i class="fas fa-times"></i>
+            </div>
+        </div>
+        <div class="fileContent">
+            Lorem ipsum blah blah
+        </div>
+    </div>
+    <div class="image">
+      <img src="../../../assets/clouds.png" class="backgroundImage">     
+  </div>
+</div>
