--- a/Tarea6/src/app/components/banner/banner.component.scss
+++ b/Tarea6/src/app/components/banner/banner.component.scss
@@ -3,7 +3,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(to right, #003f5c 0%, #444e86 25%, #955196 50%, #dd5182 75%, #ff6e54 100%);
+    background: linear-gradient(to right,
+                                #003f5c 0%,
+                                #444e86 25%,
+                                #955196 50%,
+                                #dd5182 75%,
+                                #ff6e54 100%);
     
     .content, .wave{
         width: 100%;
@@ -46,7 +51,6 @@
         }
     }
     .content{ //incluye texto e imagenes
-        z-index:2; //encima de la ola
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -54,6 +58,7 @@
         padding: 0 50px;
 
         .left{ //textos a la izquierda
+            z-index:2;
             width: 50%;
             display: flex;
             flex-direction: column;
