--- a/Tarea6/src/app/components/work-experience/work-experience.component.scss
+++ b/Tarea6/src/app/components/work-experience/work-experience.component.scss
@@ -64,6 +64,9 @@
             min-height: 150px;
         }
     }
+    .buttons{
+        z-index: 3;
+    }
     button{
         height:40px;
         width:40px;
@@ -72,7 +75,7 @@
         font-weight: bold;
         color: white;
         background-color: #ff6e54;
-        &:hover{
+        &:hover {
             background-color: #ffa600;
         }
     }
