education completo, quizá decorar más

--- a/Tarea6/src/app/components/education/education.component.html
+++ b/Tarea6/src/app/components/education/education.component.html
@@ -3,16 +3,12 @@
     <div class="card" id="uniCard">
       <h1>ITESO</h1>
       <h2>Instituto Tecnológico de Estudios Superiores de Occidente</h2>
+      <h3>Bachelors degree in Computer Systems Engineering</h3>
+      <h3>Expected graduation date in December 2024</h3>
+      <h3>GPA: 9.9 / 10</h3>
     </div>
   </div>
-  <div class="highschoolSection">
-    <div class="card">
-      <h1>CEDI</h1>
-      <h2>Centro de Desarrollo Integral Arboledas</h2>
-    </div>
-    <div class="card">
-      <h1>Agora</h1>
-      <h2>Sant Cugat International School</h2>
-    </div>
+  <div class="logo">
+    <img src="https://oci02.img.iteso.mx/Identidades-De-Instancia/ITESO/Logos%20ITESO/Logo-ITESO-Principal-Sinfondo-vertical.png">
   </div>
 </div>
