--- a/Tarea6/src/app/components/personal-info/personal-info.component.html
+++ b/Tarea6/src/app/components/personal-info/personal-info.component.html
@@ -10,8 +10,14 @@
             </div>
         </div>
         <div class="fileContent">
-            Lorem ipsum blah blah
-        </div>
+            Hi! My name is Daniela Esparza Espinosa and I'm a passionate 22-years-old computer systems engineering student<br>
+            I'm really interested in learning as much as I can from everything tech related, and ever since I was a child I loved technology
+            and everything you can achieve through it and the impact it has on people and their daily life.<br>
+            Throughout my career, I've had the oppotunity to work on several internships and learn from amazing engineers while getting hands-on experience 
+            while exploring several roles and areas such as: Project Management, Data Analyst, Mobile development, and Support.<br>
+            Apart from coding, I enjoy learning about new technologies, reading, spending time with my friends, designing and drawing. 
+            That's why one of my main areas of interest is the intersection between coding and design. <br>            
+            If you're interested in working together or have any questions, please don't hesitate to reach out.<br> Thanks for stopping by!        </div>
     </div>
     <div class="image">
       <img src="../../../assets/clouds.png" class="backgroundImage">     
