--- a/Tarea6/src/app/components/skills/skills.component.html
+++ b/Tarea6/src/app/components/skills/skills.component.html
@@ -1,1 +1,63 @@
-<p>skills works!</p>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+<div class="skills">
+    <div class="skill-container">
+        <div class="skill">
+            <i class="devicon-html5-plain"></i>
+            <p>HTML5</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-css3-plain"></i>
+            <p>CSS3</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-javascript-plain"></i>
+            <p>JavaScript</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-cplusplus-plain"></i>
+            <p>C++</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-nodejs-plain"></i>
+            <p>Node.js</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-c-plain"></i>
+            <p>C</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-python-plain"></i>
+            <p>Python</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-github-original"></i>
+            <p>GitHub</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-mongodb-plain"></i>
+            <p>MongoDB</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-microsoftsqlserver-plain"></i>
+            <p>SQL</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-minitab-plain"></i>
+            <p>PowerBI</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-minitab-plain"></i>
+            <p>Tableau / TableauPrep</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-confluence-original"></i>
+            <p>Confluence</p>
+        </div>
+        <div class="skill">
+            <i class="devicon-mongodb-plain"></i>
+            <p>ServiceNow</p>
+        </div>
+    </div>
+  </div>
+  
