--- a/Tarea6/src/app/layout/nav/nav.component.html
+++ b/Tarea6/src/app/layout/nav/nav.component.html
@@ -9,7 +9,7 @@
         <a routerLink="/personal-information"><i class="fas fa-user"></i> Personal information</a>
         <a routerLink="/education"><i class="fas fa-book"></i> Education</a>
         <a routerLink="/work-experience"><i class="fas fa-briefcase"></i> Work experience</a>
-        <a routerLink="/skills"><i class="fas fa-tools"></i> Skills & coursework</a>
+        <a routerLink="/skills"><i class="fas fa-tools"></i> Skills</a>
         <a routerLink="/projects"><i class="fas fa-laptop-code"></i> Projects</a>
         <a routerLink="/contact"><i class="fas fa-envelope"></i> Contact</a>
     </div>
