--- a/Tarea6/src/app/components/education/education.component.html
+++ b/Tarea6/src/app/components/education/education.component.html
@@ -1,4 +1,7 @@
 <div class="education">
+  <div class="wave">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,256L48,224C96,192,192,128,288,96C384,64,480,64,576,80C672,96,768,128,864,122.7C960,117,1056,75,1152,90.7C1248,107,1344,181,1392,218.7L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+  </div>
   <div class="uniSection">
     <div class="card" id="uniCard">
       <h1>ITESO</h1>
